Gtest is set up.

--- a/pseudocron_tests/CMakeLists.txt
+++ b/pseudocron_tests/CMakeLists.txt
@@ -3,3 +3,6 @@ cmake_minimum_required(VERSION 3.2)
 project(pseudocron_tests)
 file(GLOB SOURCES "*.cxx" "*.hxx")
 add_executable(pseudocron_tests ${SOURCES})
+target_link_libraries(pseudocron_tests
+    gtest
+    pthread)
