--- a/pseudocron_daemon/CMakeLists.txt
+++ b/pseudocron_daemon/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required(VERSION 3.2)
 
 project(pseudocron_daemon)
-file(GLOB SOURCES "*.cxx" "*.hxx")
-add_executable(pseudocron_daemon ${SOURCES})
+set(daemon_sources
+    main.cxx
+    task.hxx
+    task.cxx)
+add_executable(pseudocron_daemon ${daemon_sources})
