--- a/pseudocron_tests/CMakeLists.txt
+++ b/pseudocron_tests/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.2)
 project(pseudocron_tests)
 file(GLOB SOURCES "*.cxx" "*.hxx")
 add_executable(pseudocron_tests ${SOURCES})
+include_directories(..)
 target_link_libraries(pseudocron_tests
     gtest
     pthread)
